--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,13 +1,11 @@
 # Simple workflow for deploying static content to GitHub Pages
-name: Build and publish to GitHub Pages
+name: Deploy static content to Pages
 
 on:
   # Runs on pushes targeting the default branch
   push:
     branches: 
-      - 'main'
-    paths:
-      - 'src/**'
+      - 'master'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -45,10 +43,23 @@ jobs:
         with:
           tag-prefix: 'v'
           commit-message: 'CI: bumps version to {{version}} [skip ci]'
+      
+      - name: Setup Pages
+        uses: actions/configure-pages@v2
+        
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v1
+        with:
+          # Upload entire repository
+          path: './dist/production'
+          
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v1
 
       - name: Create Release
         uses: ncipollo/release-action@v1.11.1
         with:
-          artifacts: './dist/'
+          artifacts: './dist/production'
           generateReleaseNotes: true
           tag: ${{ steps.version-bump.outputs.newTag }}
