--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -51,7 +51,7 @@ jobs:
         uses: actions/upload-pages-artifact@v3.0.1
         with:
           # Upload entire repository
-          path: './dist/production'      
+          path: './dist'      
           
       - name: Deploy to GitHub Pages
         id: deployment
